Alignment issues fixed

--- a/public/css/project_style.css
+++ b/public/css/project_style.css
@@ -170,7 +170,8 @@
         padding-right: 20px;
     }
 
-    .center{
-      float: center;
-      }
+    .center {
+        margin: auto;
+        width: 40%;
+    }
 
